tests/idris2/linear006/expected
1/1: Building ZFun (ZFun.idr)
Error: While processing right hand side of bar. Main.test is not accessible in this context.

ZFun.idr:13:7--13:15
    |
 13 | bar = test foo -- bad!
    |       ^^^^^^^^

Main> [tc] Main> 10
[tc] Main> Bye for now!
